[gd_scene load_steps=19 format=3 uid="uid://cfhijka6t0tcb"]

[ext_resource type="Script" path="res://Scripts/Client.gd" id="1_mtcsr"]
[ext_resource type="Texture2D" uid="uid://w4uevn7obhnj" path="res://assets/background/Free Pixel Art Forest/Preview/Background.png" id="2_xulrb"]
[ext_resource type="Texture2D" uid="uid://b0onh4u7brqtk" path="res://Vid/right-arrow.png" id="6_qcmxi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvk77"]
bg_color = Color(0.00392157, 0.0627451, 0.0941176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g7s8h"]
bg_color = Color(0.00151694, 0.0258832, 0.0453613, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66mwq"]
bg_color = Color(0.00101039, 0.0172379, 0.0303864, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66hg2"]
bg_color = Color(0.141176, 0.00784314, 0.0745098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d62ej"]
bg_color = Color(0.105393, 0.00483654, 0.0508864, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43cxk"]
bg_color = Color(0.064852, 0.00240339, 0.0257854, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jiwbj"]
bg_color = Color(0.00392157, 0.0627451, 0.0941176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_are6f"]
bg_color = Color(0.32549, 0.454902, 0.392157, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45m8x"]
bg_color = Color(0.325799, 0.453647, 0.393712, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wiay"]
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0fyn"]
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkcfk"]
bg_color = Color(0.838897, 0.838897, 0.838897, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wftqn"]
bg_color = Color(0.58787, 0.607684, 0.578067, 1)
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_afn8h"]
Button/styles/disabled = SubResource("StyleBoxFlat_6wiay")
Button/styles/focus = SubResource("StyleBoxFlat_l0fyn")
Button/styles/hover = SubResource("StyleBoxFlat_gkcfk")
Button/styles/normal = SubResource("StyleBoxFlat_wftqn")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nyf2o"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtcsr")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.862745)
position = Vector2(579, 201.75)
scale = Vector2(1.24353, 1.12926)
texture = ExtResource("2_xulrb")

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 315.0
offset_top = 55.0
offset_right = 372.0
offset_bottom = 112.0
theme_override_styles/normal = SubResource("StyleBoxFlat_vvk77")
theme_override_styles/hover = SubResource("StyleBoxFlat_g7s8h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_66mwq")
text = "Host"

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 71.0
offset_right = 442.0
offset_bottom = 114.0
theme_override_styles/normal = SubResource("StyleBoxFlat_66hg2")
theme_override_styles/hover = SubResource("StyleBoxFlat_d62ej")
theme_override_styles/pressed = SubResource("StyleBoxFlat_43cxk")
text = "Join
"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 576.0
offset_top = -56.0
offset_right = 853.0
offset_bottom = 39.0

[node name="UserAccountLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 14.0
offset_right = 126.0
offset_bottom = 37.0
text = "User Account"

[node name="UserAccountText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 153.0
offset_top = 16.0
offset_right = 258.0
offset_bottom = 39.0
text = "user account"

[node name="DisplayName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 56.0
offset_right = 128.0
offset_bottom = 79.0
text = "Display Name"

[node name="DisplayNameText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 151.0
offset_top = 55.0
offset_right = 256.0
offset_bottom = 78.0
text = "user account"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 1
offset_left = 288.0
offset_top = 112.0
offset_right = 843.632
offset_bottom = 518.972
theme_override_styles/panel = SubResource("StyleBoxFlat_jiwbj")

[node name="JoinCreateMatch" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 381.0
offset_top = 183.5
offset_right = 528.0
offset_bottom = 227.5
text = "Join/Create"

[node name="MatchName" type="LineEdit" parent="Panel3"]
layout_mode = 0
offset_left = 41.0
offset_top = 192.0
offset_right = 360.0
offset_bottom = 223.0

[node name="Label" type="Label" parent="Panel3"]
layout_mode = 0
offset_left = 39.0
offset_top = 146.5
offset_right = 221.0
offset_bottom = 176.5
theme_override_font_sizes/font_size = 25
text = "Name Of Match"

[node name="Matchmaking" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 384.0
offset_top = 8.5
offset_right = 549.0
offset_bottom = 43.5
theme_override_font_sizes/font_size = 20
text = "Ready!"

[node name="Button" type="Button" parent="Panel3"]
layout_mode = 0
offset_left = 205.0
offset_top = 345.5
offset_right = 353.0
offset_bottom = 385.5
theme_override_font_sizes/font_size = 20
text = "Start Game"

[node name="Panel4" type="Panel" parent="."]
layout_mode = 0
offset_left = 882.0
offset_top = 17.0
offset_right = 1106.0
offset_bottom = 181.0
theme_override_styles/panel = SubResource("StyleBoxFlat_are6f")

[node name="BlockFriends" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 4.0
offset_top = 125.0
offset_right = 105.0
offset_bottom = 156.0
text = "Block Friend"

[node name="GetFriends" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 3.0
offset_top = 84.0
offset_right = 104.0
offset_bottom = 115.0
text = "Get Friends"

[node name="AddFriendText" type="LineEdit" parent="Panel4"]
layout_mode = 0
offset_left = 20.0
offset_top = 32.0
offset_right = 201.0
offset_bottom = 63.0
placeholder_text = "Name of friend"

[node name="AddFriend" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 106.0
offset_top = 84.0
offset_right = 207.0
offset_bottom = 115.0
text = "Add friend"

[node name="RemoveFriend" type="Button" parent="Panel4/AddFriend"]
layout_mode = 0
offset_left = -1.0
offset_top = 41.0
offset_right = 110.0
offset_bottom = 72.0
text = "Delete friend"

[node name="Panel4" type="Panel" parent="Panel4"]
layout_mode = 0
offset_top = 172.0
offset_right = 224.0
offset_bottom = 325.0
theme_override_styles/panel = SubResource("StyleBoxFlat_45m8x")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel4/Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel4/Panel4"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][b]Friends"

[node name="Panel5" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 274.0
offset_right = 234.0
offset_bottom = 438.0

[node name="CloseGroup" type="Button" parent="Panel5"]
layout_mode = 0
offset_left = 1.0
offset_top = 126.0
offset_right = 102.0
offset_bottom = 157.0
text = "Close Group"

[node name="GetGroupMemebers" type="Button" parent="Panel5"]
layout_mode = 0
offset_left = 3.0
offset_top = 84.0
offset_right = 104.0
offset_bottom = 115.0
text = "Get Group"

[node name="GroupName" type="LineEdit" parent="Panel5"]
layout_mode = 0
offset_left = 20.0
offset_top = 32.0
offset_right = 201.0
offset_bottom = 63.0
placeholder_text = "Name of group"

[node name="CreateGroup" type="Button" parent="Panel5"]
layout_mode = 0
offset_left = 106.0
offset_top = 84.0
offset_right = 207.0
offset_bottom = 115.0
text = "Create Group"

[node name="DeleteGroup" type="Button" parent="Panel5/CreateGroup"]
layout_mode = 0
offset_left = -4.0
offset_top = 41.0
offset_right = 105.0
offset_bottom = 72.0
text = "Delete Group"

[node name="Panel4" type="Panel" parent="Panel5"]
layout_mode = 0
offset_left = 246.0
offset_top = 9.0
offset_right = 470.0
offset_bottom = 253.0

[node name="GroupVBox" type="VBoxContainer" parent="Panel5/Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel5/Panel4"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][b]Group Memebers"

[node name="Panel6" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 546.0
offset_top = 250.0
offset_right = 945.0
offset_bottom = 658.0

[node name="Label" type="Label" parent="Panel6"]
layout_mode = 0
offset_left = 14.0
offset_top = 26.0
offset_right = 61.0
offset_bottom = 49.0
text = "Name"

[node name="Label2" type="Label" parent="Panel6"]
layout_mode = 0
offset_left = 16.0
offset_top = 66.0
offset_right = 105.0
offset_bottom = 89.0
text = "Description"

[node name="GroupName" type="LineEdit" parent="Panel6"]
layout_mode = 0
offset_left = 113.0
offset_top = 26.0
offset_right = 298.0
offset_bottom = 57.0

[node name="GroupDesc" type="LineEdit" parent="Panel6"]
layout_mode = 0
offset_left = 114.0
offset_top = 63.0
offset_right = 298.0
offset_bottom = 94.0

[node name="GroupQuery" type="LineEdit" parent="Panel6"]
layout_mode = 0
offset_left = 157.0
offset_top = 212.0
offset_right = 298.0
offset_bottom = 243.0
placeholder_text = "Group Query"

[node name="CreateGroup" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 153.0
offset_top = 107.0
offset_right = 265.0
offset_bottom = 138.0
text = "Create Group"

[node name="AddUserToGroup" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 28.0
offset_top = 107.0
offset_right = 140.0
offset_bottom = 138.0
text = "Join Group"

[node name="AddUserToGroup2" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 30.0
offset_top = 147.0
offset_right = 142.0
offset_bottom = 201.0
text = "Add User 
To Group"

[node name="List Groups" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 30.0
offset_top = 208.0
offset_right = 142.0
offset_bottom = 262.0
text = "List Groups"

[node name="CheckButton" type="CheckButton" parent="Panel6"]
layout_mode = 0
offset_left = 173.0
offset_top = 164.0
offset_right = 263.0
offset_bottom = 195.0
text = "Open"

[node name="Panel" type="Panel" parent="Panel6"]
layout_mode = 0
offset_left = 412.0
offset_top = 4.0
offset_right = 656.0
offset_bottom = 273.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel6/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UserToManage" type="LineEdit" parent="Panel6"]
layout_mode = 0
offset_left = 33.0
offset_top = 277.0
offset_right = 276.0
offset_bottom = 308.0
placeholder_text = "User To Manage"

[node name="PromoteUser" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 25.0
offset_top = 319.0
offset_right = 129.0
offset_bottom = 355.0
text = "Promote"

[node name="KickUser" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 144.0
offset_top = 320.0
offset_right = 248.0
offset_bottom = 356.0
text = "Kick"

[node name="DemoteUser" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 23.0
offset_top = 364.0
offset_right = 127.0
offset_bottom = 400.0
text = "Demote"

[node name="BanUser" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 147.0
offset_top = 364.0
offset_right = 251.0
offset_bottom = 400.0
text = "Ban"

[node name="LeaveGroup" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 285.0
offset_top = 106.0
offset_right = 391.0
offset_bottom = 142.0
text = "Leave Group"

[node name="DeleteGroup" type="Button" parent="Panel6"]
layout_mode = 0
offset_left = 278.0
offset_top = 158.0
offset_right = 384.0
offset_bottom = 194.0
text = "Leave Group"

[node name="Panel7" type="Panel" parent="."]
layout_mode = 0
offset_left = 620.0
offset_top = 384.0
offset_right = 620.0
offset_bottom = 599.0

[node name="JoinGroupChatRoom" type="Button" parent="Panel7"]
visible = false
layout_mode = 0
offset_left = 59.0
offset_top = 109.0
offset_right = 189.0
offset_bottom = 153.0
text = "Join Group Chat"

[node name="JoinChatRoom" type="Button" parent="Panel7"]
visible = false
layout_mode = 0
offset_left = 63.0
offset_top = 57.0
offset_right = 173.0
offset_bottom = 101.0
text = "Join Chat"

[node name="ChatName" type="LineEdit" parent="Panel7"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 13.0
offset_right = 199.0
offset_bottom = 44.0
placeholder_text = "Chat Name"

[node name="Chat" type="Panel" parent="Panel7"]
layout_mode = 0
offset_left = 222.0
offset_top = 11.0
offset_right = 536.0
offset_bottom = 263.0

[node name="ChatText" type="LineEdit" parent="Panel7/Chat"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = -82.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Chat Text Here"

[node name="SubmitChat" type="Button" parent="Panel7/Chat"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -33.0
grow_horizontal = 0
grow_vertical = 0
text = ">"

[node name="TabContainer" type="TabContainer" parent="Panel7/Chat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2

[node name="username" type="TextEdit" parent="Panel7/Chat/TabContainer"]
layout_mode = 2
editable = false
wrap_mode = 1

[node name="JoinDirectChat" type="Button" parent="Panel7"]
visible = false
layout_mode = 0
offset_left = 57.0
offset_top = 161.0
offset_right = 187.0
offset_bottom = 205.0
text = "Join Direct Chat"

[node name="back" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 91.0
offset_top = 623.0
offset_right = 165.0
offset_bottom = 681.0
rotation = 3.14159
theme = SubResource("Theme_afn8h")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_nyf2o")
icon = ExtResource("6_qcmxi")
icon_alignment = 1

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="button_down" from="Panel3/JoinCreateMatch" to="." method="_on_join_create_match_button_down"]
[connection signal="button_down" from="Panel3/Matchmaking" to="." method="_on_matchmaking_button_down"]
[connection signal="button_down" from="Panel3/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Panel4/BlockFriends" to="." method="_on_block_friends_button_down"]
[connection signal="button_down" from="Panel4/GetFriends" to="." method="_on_get_friends_button_down"]
[connection signal="button_down" from="Panel4/AddFriend" to="." method="_on_add_friend_button_down"]
[connection signal="button_down" from="Panel4/AddFriend/RemoveFriend" to="." method="_on_remove_friend_button_down"]
[connection signal="button_down" from="Panel5/GetGroupMemebers" to="." method="_on_get_group_memebers_button_down"]
[connection signal="button_down" from="Panel5/CreateGroup" to="." method="_on_create_group_button_down"]
[connection signal="button_down" from="Panel6/CreateGroup" to="." method="_on_create_group_button_down"]
[connection signal="button_down" from="Panel6/AddUserToGroup" to="." method="_on_add_user_to_group_button_down"]
[connection signal="button_down" from="Panel6/AddUserToGroup2" to="." method="_on_add_user_to_group_2_button_down"]
[connection signal="button_down" from="Panel6/List Groups" to="." method="_on_list_groups_button_down"]
[connection signal="toggled" from="Panel6/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="button_down" from="Panel6/PromoteUser" to="." method="_on_promote_user_button_down"]
[connection signal="button_down" from="Panel6/KickUser" to="." method="_on_kick_user_button_down"]
[connection signal="button_down" from="Panel6/DemoteUser" to="." method="_on_demote_user_button_down"]
[connection signal="button_down" from="Panel6/BanUser" to="." method="_on_ban_user_button_down"]
[connection signal="button_down" from="Panel6/LeaveGroup" to="." method="_on_leave_group_button_down"]
[connection signal="button_down" from="Panel6/DeleteGroup" to="." method="_on_delete_group_button_down"]
[connection signal="button_down" from="Panel7/JoinGroupChatRoom" to="." method="_on_join_group_chat_room_button_down"]
[connection signal="button_down" from="Panel7/JoinChatRoom" to="." method="_on_join_chat_room_button_down"]
[connection signal="button_down" from="Panel7/Chat/SubmitChat" to="." method="_on_submit_chat_button_down"]
[connection signal="button_down" from="Panel7/JoinDirectChat" to="." method="_on_join_direct_chat_button_down"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
